--- a/index.html
+++ b/index.html
@@ -123,8 +123,14 @@
     const colorsEl = document.getElementById('colors');
     let currentColor = palette[1];
     palette.forEach(c=>{
-      const b = document.createElement('div');b.className='color-swatch';b.style.background=c;
-      b.addEventListener('click',()=>{currentColor=c;});
+      const b = document.createElement('div');
+      b.className='color-swatch';
+      b.style.background=c;
+      b.addEventListener('click',()=>{
+        currentColor=c;
+        document.querySelectorAll('.color-swatch').forEach(s=>s.style.border='1px solid rgba(255,255,255,0.06)');
+        b.style.border='2px solid #06b6d4';
+      });
       colorsEl.appendChild(b);
     });
 
@@ -160,7 +166,7 @@
       ctx.strokeStyle=s.color; ctx.lineWidth=s.size;
       ctx.beginPath();
       ctx.moveTo(s.points[0].x, s.points[0].y);
-      for(let i=1;i<s.points.length;i++) ctx.lineTo(s.points[i].x, s.points[i].y);
+      for(let i=1;i<s.points.length;i++) ctx.lineTo(s.points[i].x,s.points[i].y);
       ctx.stroke();
     }
     function drawStrokeSegment(s){
@@ -183,16 +189,29 @@
       const data = JSON.stringify({strokes}, null, 2);
       downloadData(data, 'embroidery-template.json', 'application/json');
     });
+
     document.getElementById('exportSvg').addEventListener('click', ()=>{
       const svg = strokesToSVG();
       downloadData(svg, 'embroidery.svg', 'image/svg+xml');
     });
+
     document.getElementById('exportPng').addEventListener('click', ()=>{
-      const svg = strokesToSVG(); const img = new Image();
-      const svgBlob=new Blob([svg],{type:'image/svg+xml;charset=utf-8'});
-      const url=URL.createObjectURL(svgBlob);
-      img.onload=()=>{const tmp=document.createElement('canvas');tmp.width=canvas.width;tmp.height=canvas.height;const tctx=tmp.getContext('2d');tctx.fillStyle='#ffffff';tctx.fillRect(0,0,tmp.width,tmp.height);tctx.drawImage(img,0,0,tmp.width,tmp.height);tmp.toBlob(b=>{downloadBlob(b,'embroidery.png');URL.revokeObjectURL(url);});};
-      img.src=url;
+      const tmp = document.createElement('canvas');
+      tmp.width = canvas.width;
+      tmp.height = canvas.height;
+      const tctx = tmp.getContext('2d');
+      tctx.fillStyle = '#ffffff';
+      tctx.fillRect(0,0,tmp.width,tmp.height);
+      strokes.forEach(s => {
+        if(s.points.length<2) return;
+        tctx.lineCap='round'; tctx.lineJoin='round';
+        tctx.strokeStyle=s.color; tctx.lineWidth=s.size;
+        tctx.beginPath();
+        tctx.moveTo(s.points[0].x,s.points[0].y);
+        for(let i=1;i<s.points.length;i++) tctx.lineTo(s.points[i].x,s.points[i].y);
+        tctx.stroke();
+      });
+      tmp.toBlob(b=>downloadBlob(b,'embroidery.png'));
     });
 
     document.getElementById('exportDst').addEventListener('click', ()=>{
@@ -212,7 +231,7 @@
           let steps = Math.max(1, Math.round(dist / stitchLen));
           for(let k=0;k<=steps;k++){
             let x = Math.round(p1.x + dx * (k/steps));
-            let y = -Math.round(p1.y + dy * (k/steps));
+            let y = Math.round(p1.y + dy * (k/steps)); // محور Y مضبوط
             body.push(x & 0xFF, y & 0xFF, 0);
           }
         }
@@ -224,15 +243,17 @@
     }
 
     function strokesToSVG(){
-      const w = rect().width, h = rect().height;
+      const w = canvas.width;
+      const h = canvas.height;
       let svg = `<?xml version="1.0"?><svg xmlns='http://www.w3.org/2000/svg' width='${w}' height='${h}' viewBox='0 0 ${w} ${h}'>`;
-      svg+=`<rect width='100%' height='100%' fill='white'/>`;
+      svg += `<rect width='100%' height='100%' fill='white'/>`;
       strokes.forEach(s=>{
-        if(s.points.length<2) return;
-        const d=s.points.map((p,i)=>i===0?`M ${p.x} ${p.y}`:`L ${p.x} ${p.y}`).join(' ');
-        svg+=`<path d='${d}' stroke='${s.color}' stroke-width='${s.size}' fill='none' stroke-linecap='round' stroke-linejoin='round'/>`;
+        if(s.points.length < 2) return;
+        const d = s.points.map((p,i)=>i===0?`M ${p.x} ${p.y}`:`L ${p.x} ${p.y}`).join(' ');
+        svg += `<path d='${d}' stroke='${s.color}' stroke-width='${s.size}' fill='none' stroke-linecap='round' stroke-linejoin='round'/>`;
       });
-      svg+='</svg>'; return svg;
+      svg += '</svg>';
+      return svg;
     }
 
     function downloadData(data, filename, type){
