--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html lang="ar">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>أداة تطريز باللمس - دعم DST كامل</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>أداة تطريز بدقة DST</title>
 <style>
 :root{
   --bg:#0f172a; --card:#0b1220; --accent:#06b6d4; --muted:#94a3b8; --glass: rgba(255,255,255,0.04);
@@ -14,7 +14,6 @@ html,body{height:100%;margin:0;font-family:Inter, system-ui, -apple-system, 'Seg
 .panel{background:linear-gradient(180deg,var(--card),#051022);border-radius:var(--radius);padding:18px;box-shadow:0 6px 30px rgba(0,0,0,0.6);backdrop-filter: blur(6px)}
 h1{font-size:18px;margin:0 0 8px}
 p.lead{color:var(--muted);font-size:13px;margin:0 0 14px}
-
 .tool{display:flex;flex-direction:column;gap:12px}
 .row{display:flex;gap:8px;align-items:center}
 .btn{display:inline-flex;align-items:center;gap:8px;padding:10px 12px;border-radius:10px;background:var(--glass);border:1px solid rgba(255,255,255,0.03);cursor:pointer;color:var(--accent);font-weight:600}
@@ -22,70 +21,59 @@ p.lead{color:var(--muted);font-size:13px;margin:0 0 14px}
 .controls{display:flex;gap:8px;align-items:center}
 .color-swatch{width:30px;height:30px;border-radius:8px;border:1px solid rgba(255,255,255,0.06);cursor:pointer}
 input[type=range]{width:120px}
-
 .stage{display:flex;flex-direction:column;gap:8px}
 .canvas-wrap{flex:1;background:var(--glass-2);border-radius:12px;padding:12px;display:flex;flex-direction:column}
 .canvas-card{flex:1;display:flex;justify-content:center;align-items:center;position:relative}
 canvas{background:#f8fafc;border-radius:8px;touch-action:none;max-width:100%;box-shadow:inset 0 0 0 1px rgba(0,0,0,0.05)}
 .footer{display:flex;justify-content:space-between;align-items:center;color:var(--muted);font-size:13px;margin-top:6px}
-
 @media (max-width:880px){.app{grid-template-columns:1fr;overflow:auto;padding:12px}.panel{order:2}}
 </style>
 </head>
 <body>
 <div class="app">
 <aside class="panel">
-<h1>أداة تطريز باللمس</h1>
-<p class="lead">ارسم بتقنية المس/اللمس أو الفأرة. احفظ القالب أو صدّر إلى SVG/PNG/DST.</p>
-
+<h1>أداة تطريز باللمس - دقة DST</h1>
+<p class="lead">ارسم باللمس أو الفأرة. احفظ القالب أو صدّر إلى PNG/SVG/DST بدقة كاملة.</p>
 <div class="tool">
-  <div class="row">
-    <button class="btn" id="newBtn">جديد</button>
-    <button class="btn secondary" id="undoBtn">تراجع</button>
-  </div>
-
-  <div class="row">
-    <div class="controls">
-      <label style="color:var(--muted);font-size:13px">حجم الإبرة</label>
-      <input type="range" id="size" min="1" max="40" value="3" />
-      <span id="sizeVal" style="width:34px;text-align:center;color:var(--muted)">3</span>
-    </div>
-  </div>
-
-  <div class="row">
-    <label style="color:var(--muted);font-size:13px;margin-bottom:6px">ألوان الخيط</label>
-  </div>
-  <div class="row" id="colors"></div>
-
-  <div class="row">
-    <button class="btn" id="saveJson">حفظ كقالب (JSON)</button>
-  </div>
-  <div class="row">
-    <button class="btn" id="exportSvg">تصدير كـ SVG</button>
-    <button class="btn" id="exportPng">تصدير كـ PNG</button>
-  </div>
-  <div class="row">
-    <button class="btn" id="exportDst">تصدير كـ DST</button>
-  </div>
+<div class="row">
+<button class="btn" id="newBtn">جديد</button>
+<button class="btn secondary" id="undoBtn">تراجع</button>
+</div>
+<div class="row">
+<div class="controls">
+<label style="color:var(--muted);font-size:13px">حجم الإبرة</label>
+<input type="range" id="size" min="1" max="40" value="3">
+<span id="sizeVal" style="width:34px;text-align:center;color:var(--muted)">3</span>
+</div>
+</div>
+<div class="row">
+<label style="color:var(--muted);font-size:13px;margin-bottom:6px">ألوان الخيط</label>
+</div>
+<div class="row" id="colors"></div>
+<div class="row">
+<button class="btn" id="saveJson">حفظ كقالب (JSON)</button>
+</div>
+<div class="row">
+<button class="btn" id="exportSvg">تصدير كـ SVG</button>
+<button class="btn" id="exportPng">تصدير كـ PNG</button>
+</div>
+<div class="row">
+<button class="btn" id="exportDst">تصدير كـ DST</button>
+</div>
 </div>
 </aside>
 
 <main class="stage panel">
 <div style="display:flex;justify-content:space-between;align-items:center">
 <strong>لوحة الرسم</strong>
-<div style="display:flex;gap:8px;align-items:center">
-<label style="color:var(--muted);font-size:13px">تبديل الشبكة</label>
-<input type="checkbox" id="gridToggle" />
-</div>
 </div>
 
 <div class="canvas-wrap">
 <div class="canvas-card">
 <canvas id="draw" width="1200" height="800"></canvas>
-<svg id="gridSVG" style="position:absolute;inset:12px;pointer-events:none;display:none" width="100%" height="100%" viewBox="0 0 1200 800" preserveAspectRatio="none"></svg>
 </div>
 <div class="footer">
-<div id="info">الخطوط: 0 — عناصر محفوظة</div>
+<div id="info">المسارات: 0</div>
 <div>تنسيقات: SVG / PNG / DST / JSON</div>
 </div>
 </div>
@@ -95,187 +83,91 @@ canvas{background:#f8fafc;border-radius:8px;touch-action:none;max-width:100%;box
 <script>
 const canvas = document.getElementById('draw');
 const ctx = canvas.getContext('2d');
-const rect = () => canvas.getBoundingClientRect();
-let drawing = false;
-let strokes = [];
-let current = null;
-
-function resizeCanvas(){
-  const r = rect();
-  const dpr = window.devicePixelRatio || 1;
-  canvas.style.width = r.width + 'px';
-  canvas.style.height = r.height + 'px';
-  canvas.width = Math.round(r.width * dpr);
-  canvas.height = Math.round(r.height * dpr);
-  ctx.scale(dpr, dpr);
-  redraw();
-}
-window.addEventListener('resize', resizeCanvas);
-setTimeout(resizeCanvas, 50);
-
-const sizeInput = document.getElementById('size');
-const sizeVal = document.getElementById('sizeVal');
-sizeInput.addEventListener('input', ()=>{sizeVal.textContent = sizeInput.value});
-
-const palette = ['#0f172a','#06b6d4','#ef4444','#f59e0b','#10b981','#7c3aed','#f97316','#111827'];
-const colorsEl = document.getElementById('colors');
+let strokes = [], current=null, drawing=false;
+const sizeInput = document.getElementById('size'), sizeVal = document.getElementById('sizeVal');
+const palette=['#0f172a','#06b6d4','#ef4444','#f59e0b','#10b981','#7c3aed','#f97316','#111827'];
 let currentColor = palette[1];
+const colorsEl = document.getElementById('colors');
 palette.forEach(c=>{
-  const b = document.createElement('div');
-  b.className='color-swatch';
-  b.style.background=c;
-  b.addEventListener('click',()=>{
-    currentColor=c;
-    document.querySelectorAll('.color-swatch').forEach(s=>s.style.border='1px solid rgba(255,255,255,0.06)');
-    b.style.border='2px solid #06b6d4';
-  });
+  const b=document.createElement('div');b.className='color-swatch';b.style.background=c;
+  b.addEventListener('click',()=>{currentColor=c;colorsEl.querySelectorAll('.color-swatch').forEach(s=>s.style.border='1px solid rgba(255,255,255,0.06)');b.style.border='2px solid #06b6d4';});
   colorsEl.appendChild(b);
 });
+sizeInput.addEventListener('input',()=>{sizeVal.textContent=sizeInput.value;});
 
-function getPointer(ev){
-  const r = rect();
-  const p = ev.touches ? ev.touches[0] : ev;
-  return {x: Math.max(0, Math.min(r.width, p.clientX - r.left)), y: Math.max(0, Math.min(r.height, p.clientY - r.top))};
+function getPointer(e){
+  const r=canvas.getBoundingClientRect();
+  const p=e.touches?e.touches[0]:e;
+  return {x:Math.max(0,Math.min(r.width,p.clientX-r.left)), y:Math.max(0,Math.min(r.height,p.clientY-r.top))};
 }
 
-function begin(x,y){
-  drawing = true;
-  current = {color:currentColor, size:parseInt(sizeInput.value,10), points:[{x,y}]};
-  strokes.push(current);
-  updateInfo();
-}
-function move(x,y){
-  if(!drawing || !current) return;
-  current.points.push({x,y});
-  drawStrokeSegment(current);
-}
-function end(){drawing = false; current = null; updateInfo();}
+function begin(x,y){drawing=true;current={color:currentColor,size:parseInt(sizeInput.value,10),points:[{x,y}]};strokes.push(current);updateInfo();}
+function move(x,y){if(!drawing||!current)return;current.points.push({x,y});drawSegment(current);}
+function end(){drawing=false;current=null;updateInfo();}
 
-function clearCanvas(){
-  ctx.clearRect(0,0,canvas.width,canvas.height);
-  const r = rect();
-  ctx.fillStyle = '#ffffff';
-  ctx.fillRect(0,0,r.width,r.height);
+function drawSegment(s){
+  const p=s.points,n=p.length; if(n<2)return;
+  ctx.lineCap='round';ctx.lineJoin='round';ctx.strokeStyle=s.color;ctx.lineWidth=s.size;
+  ctx.beginPath();ctx.moveTo(p[n-2].x,p[n-2].y);ctx.lineTo(p[n-1].x,p[n-1].y);ctx.stroke();
 }
-function redraw(){clearCanvas(); strokes.forEach(s=> drawFullStroke(s));}
-function drawFullStroke(s){
-  if(s.points.length<2) return;
-  ctx.lineCap='round'; ctx.lineJoin='round';
-  ctx.strokeStyle=s.color; ctx.lineWidth=s.size;
-  ctx.beginPath();
-  ctx.moveTo(s.points[0].x, s.points[0].y);
-  for(let i=1;i<s.points.length;i++) ctx.lineTo(s.points[i].x,s.points[i].y);
-  ctx.stroke();
-}
-function drawStrokeSegment(s){
-  const p=s.points; const n=p.length;
-  if(n<2) return;
-  ctx.lineCap='round'; ctx.lineJoin='round';
-  ctx.strokeStyle=s.color; ctx.lineWidth=s.size;
-  ctx.beginPath(); ctx.moveTo(p[n-2].x,p[n-2].y); ctx.lineTo(p[n-1].x,p[n-1].y); ctx.stroke();
-}
+function drawFull(s){if(s.points.length<2)return;ctx.lineCap='round';ctx.lineJoin='round';ctx.strokeStyle=s.color;ctx.lineWidth=s.size;ctx.beginPath();ctx.moveTo(s.points[0].x,s.points[0].y);for(let i=1;i<s.points.length;i++)ctx.lineTo(s.points[i].x,s.points[i].y);ctx.stroke();}
+function redraw(){ctx.clearRect(0,0,canvas.width,canvas.height);strokes.forEach(drawFull);}
+function updateInfo(){document.getElementById('info').textContent=`المسارات: ${strokes.length}`;}
 
 canvas.addEventListener('pointerdown', e=>{canvas.setPointerCapture(e.pointerId); const p=getPointer(e); begin(p.x,p.y);});
-canvas.addEventListener('pointermove', e=>{if(!drawing) return; const p=getPointer(e); move(p.x,p.y);});
+canvas.addEventListener('pointermove', e=>{if(!drawing)return; const p=getPointer(e); move(p.x,p.y);});
 canvas.addEventListener('pointerup', e=>{canvas.releasePointerCapture(e.pointerId); end();});
 canvas.addEventListener('pointercancel', end);
 
-document.getElementById('undoBtn').addEventListener('click', ()=>{ if(strokes.length){strokes.pop(); redraw(); updateInfo();} });
-document.getElementById('newBtn').addEventListener('click', ()=>{ if(confirm('مسح الرسم الحالي؟')){strokes=[]; redraw(); updateInfo();}});
+document.getElementById('undoBtn').addEventListener('click',()=>{if(strokes.length){strokes.pop();redraw();updateInfo();}});
+document.getElementById('newBtn').addEventListener('click',()=>{if(confirm('مسح الرسم الحالي؟')){strokes=[];redraw();updateInfo();}});
 
-document.getElementById('saveJson').addEventListener('click', ()=>{
-  const data = JSON.stringify({strokes}, null, 2);
-  downloadData(data, 'embroidery-template.json', 'application/json');
-});
+document.getElementById('saveJson').addEventListener('click',()=>{downloadData(JSON.stringify({strokes},null,2),'embroidery-template.json','application/json');});
+document.getElementById('exportSvg').addEventListener('click',()=>{downloadData(strokesToSVG(),'embroidery.svg','image/svg+xml');});
+document.getElementById('exportPng').addEventListener('click',()=>{exportPNG();});
+document.getElementById('exportDst').addEventListener('click',()=>{downloadData(strokesToDST(strokes,canvas.width,canvas.height),'embroidery.dst','application/octet-stream');});
 
-document.getElementById('exportSvg').addEventListener('click', ()=>{
-  const svg = strokesToSVG();
-  downloadData(svg, 'embroidery.svg', 'image/svg+xml');
-});
-
-document.getElementById('exportPng').addEventListener('click', ()=>{
-  const tmp = document.createElement('canvas');
-  tmp.width = canvas.width;
-  tmp.height = canvas.height;
-  const tctx = tmp.getContext('2d');
-  tctx.fillStyle = '#ffffff';
-  tctx.fillRect(0,0,tmp.width,tmp.height);
-  strokes.forEach(s => {
-    if(s.points.length<2) return;
-    tctx.lineCap='round'; tctx.lineJoin='round';
-    tctx.strokeStyle=s.color; tctx.lineWidth=s.size;
-    tctx.beginPath();
-    tctx.moveTo(s.points[0].x,s.points[0].y);
-    for(let i=1;i<s.points.length;i++) tctx.lineTo(s.points[i].x,s.points[i].y);
-    tctx.stroke();
-  });
+function exportPNG(){
+  const tmp=document.createElement('canvas'); tmp.width=canvas.width; tmp.height=canvas.height;
+  const tctx=tmp.getContext('2d'); tctx.fillStyle='#ffffff'; tctx.fillRect(0,0,tmp.width,tmp.height);
+  strokes.forEach(s=>{if(s.points.length<2)return;tctx.lineCap='round';tctx.lineJoin='round';tctx.strokeStyle=s.color;tctx.lineWidth=s.size;tctx.beginPath();tctx.moveTo(s.points[0].x,s.points[0].y);for(let i=1;i<s.points.length;i++)tctx.lineTo(s.points[i].x,s.points[i].y);tctx.stroke();});
   tmp.toBlob(b=>downloadBlob(b,'embroidery.png'));
-});
-
-document.getElementById('exportDst').addEventListener('click', ()=>{
-  const dst = strokesToDST(strokes, canvas.width, canvas.height);
-  downloadData(dst, 'embroidery.dst', 'application/octet-stream');
-});
-
-// ================== DST PRECISION ==================
-function strokesToDST(strokes, canvasWidth, canvasHeight){
-  const header = new Uint8Array(512);
-  const body = [];
-  const scale = 1; // يمكنك تعديل المقياس لو تطريز أكبر/أصغر
-  let lastX = 0, lastY = 0;
-
-  for(let s of strokes){
-    for(let i=0;i<s.points.length;i++){
-      const p = s.points[i];
-      // تحويل الإحداثيات
-      let x = Math.round(p.x * scale);
-      let y = Math.round(p.y * scale);
-      let dx = x - lastX;
-      let dy = -(y - lastY); // انعكاس المحور Y
-
-      // تقسيم الغرز الطويلة
-      while(Math.abs(dx) > 121 || Math.abs(dy) > 121){
-        const stepX = Math.max(-121, Math.min(121, dx));
-        const stepY = Math.max(-121, Math.min(121, dy));
-        body.push(stepX & 0xFF, stepY & 0xFF, 0);
-        dx -= stepX;
-        dy -= stepY;
-      }
-
-      body.push(dx & 0xFF, dy & 0xFF, 0);
-      lastX = x;
-      lastY = y;
-    }
-  }
-
-  body.push(0x1A,0,0);
-  const result = new Uint8Array(header.length + body.length);
-  result.set(header,0);
-  result.set(body,header.length);
-  return result.buffer;
 }
 
 function strokesToSVG(){
-  const w = canvas.width;
-  const h = canvas.height;
-  let svg = `<?xml version="1.0"?><svg xmlns='http://www.w3.org/2000/svg' width='${w}' height='${h}' viewBox='0 0 ${w} ${h}'>`;
-  svg += `<rect width='100%' height='100%' fill='white'/>`;
-  strokes.forEach(s=>{
-    if(s.points.length < 2) return;
-    const d = s.points.map((p,i)=>i===0?`M ${p.x} ${p.y}`:`L ${p.x} ${p.y}`).join(' ');
-    svg += `<path d='${d}' stroke='${s.color}' stroke-width='${s.size}' fill='none' stroke-linecap='round' stroke-linejoin='round'/>`;
-  });
-  svg += '</svg>';
-  return svg;
+  let svg=`<?xml version="1.0"?><svg xmlns='http://www.w3.org/2000/svg' width='${canvas.width}' height='${canvas.height}' viewBox='0 0 ${canvas.width} ${canvas.height}'>`;
+  svg+=`<rect width='100%' height='100%' fill='white'/>`;
+  strokes.forEach(s=>{if(s.points.length<2)return; const d=s.points.map((p,i)=>i===0?`M ${p.x} ${p.y}`:`L ${p.x} ${p.y}`).join(' '); svg+=`<path d='${d}' stroke='${s.color}' stroke-width='${s.size}' fill='none' stroke-linecap='round' stroke-linejoin='round'/>`;});
+  svg+='</svg>'; return svg;
 }
 
-function downloadData(data, filename, type){
-  const blob = (data instanceof ArrayBuffer) ? new Blob([data],{type}) : new Blob([data],{type});
-  const url = URL.createObjectURL(blob);
-  const a=document.createElement('a');a.href=url;a.download=filename;document.body.appendChild(a);a.click();a.remove();URL.revokeObjectURL(url);
+function strokesToDST(strokes,width,height){
+  const header=new Uint8Array(512);
+  const body=[];
+  let lastX=0,lastY=0;
+  const scale=1; // يمكن تعديل المقياس
+  for(let s of strokes){
+    for(let i=0;i<s.points.length;i++){
+      const p=s.points[i];
+      let x=Math.round(p.x*scale), y=Math.round(p.y*scale);
+      let dx=x-lastX, dy=-(y-lastY);
+      while(Math.abs(dx)>121||Math.abs(dy)>121){
+        const stepX=Math.max(-121,Math.min(121,dx));
+        const stepY=Math.max(-121,Math.min(121,dy));
+        body.push(stepX&0xFF, stepY&0xFF,0);
+        dx-=stepX; dy-=stepY;
+      }
+      body.push(dx&0xFF,dy&0xFF,0);
+      lastX=x; lastY=y;
+    }
+  }
+  body.push(0x1A,0,0);
+  const result=new Uint8Array(header.length+body.length); result.set(header,0); result.set(body,header.length);
+  return result.buffer;
 }
-function downloadBlob(b,name){const url=URL.createObjectURL(b);const a=document.createElement('a');a.href=url;a.download=name;document.body.appendChild(a);a.click();a.remove();URL.revokeObjectURL(url);}
-function updateInfo(){document.getElementById('info').textContent=`المسارات: ${strokes.length}`;}
+
+function downloadData(data,name,type){const blob=new Blob([data],{type});const a=document.createElement('a');a.href=URL.createObjectURL(blob);a.download=name;document.body.appendChild(a);a.click();a.remove();}
+function downloadBlob(b,name){const a=document.createElement('a');a.href=URL.createObjectURL(b);a.download=name;document.body.appendChild(a);a.click();a.remove();}
 </script>
 </body>
 </html>
